<!--
  ~ Copyright (c) 2019 Zhilei Han and Yihao Chen.
  ~ This software falls under the GNU general public license version 3 or later.
  ~ It comes WITHOUT ANY WARRANTY WHATSOEVER. For details, see the file LICENSE
  ~ in the root directory or <http://www.gnu.org/licenses/gpl-3.0.html>.
  -->

<resources>
    <string name="app_name">NewsClientApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">设置</string>
    <string name="action_darkmode">暗黑模式</string>
    <string name="action_update">更新</string>
    <string name="action_about">关于</string>

    <string name="menu_home">Home</string>
    <string name="menu_cache">缓存</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_share">分享</string>
    <string name="menu_send">Send</string>

    <string name="info_change_tab">选择调整标签页</string>

    <string name="display_news">新闻</string>

    <string name="fab_add_favorite">收藏</string>
    <string name="fab_remove_favorite">取消收藏</string>

    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="fab_voice">朗读</string>
    <string name="search_hint">输入关键词</string>

    <string name="already_update">已经是最新了</string>
    <string name="about_text">Copyright (c) 2019 Zhilei Han and Yihao Chen. This software falls under the GNU general public license version 3 or later. It comes WITHOUT ANY WARRANTY WHATSOEVER. For details, see the file LICENSE in the root directory or http://www.gnu.org/licenses/gpl-3.0.html.</string>
</resources>
