<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Zhilei Han and Yihao Chen.
  ~ This software falls under the GNU general public license version 3 or later.
  ~ It comes WITHOUT ANY WARRANTY WHATSOEVER. For details, see the file LICENSE
  ~ in the root directory or <http://www.gnu.org/licenses/gpl-3.0.html>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
