<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Zhilei Han and Yihao Chen.
  ~ This software falls under the GNU general public license version 3 or later.
  ~ It comes WITHOUT ANY WARRANTY WHATSOEVER. For details, see the file LICENSE
  ~ in the root directory or <http://www.gnu.org/licenses/gpl-3.0.html>.
  -->

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_ground_00dp"
        android:orientation="vertical"
        tools:context=".ui.activity.NewsDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/dark_ground_08dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:titleTextColor="@color/dark_text" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/news_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/news_title"
                    style="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:textColor="@color/dark_text" />

                <TextView
                    android:id="@+id/news_text"
                    style="@android:style/TextAppearance.DeviceDefault.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:textColor="@color/dark_text" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/fab_margin"
            app:menu_colorNormal="@color/colorPrimary"
            app:menu_colorPressed="@color/colorPrimary"
            app:menu_icon="@drawable/fab_add">
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_share"
                app:fab_size="mini"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimary"
                app:fab_label="@string/menu_share" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star"
                app:fab_size="mini"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimary"
                app:fab_label="@string/fab_add_favorite" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_headset"
                app:fab_size="mini"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimary"
                app:fab_label="@string/fab_voice" />
        </com.github.clans.fab.FloatingActionMenu>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.drawerlayout.widget.DrawerLayout>
